; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/http/extr_hpack.c_hpack_decode_hdr.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/http/extr_hpack.c_hpack_decode_hdr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hpack_decoder = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.hpack_decoder*, i32**, i64*, i8**, i8**)* @hpack_decode_hdr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hpack_decode_hdr(%struct.hpack_decoder* %0, i32** noalias %1, i64* noalias %2, i8** noalias %3, i8** noalias %4) #0 {
  %6 = alloca %struct.hpack_decoder*, align 8
  %7 = alloca i32**, align 8
  %8 = alloca i64*, align 8
  %9 = alloca i8**, align 8
  %10 = alloca i8**, align 8
  %11 = alloca i32 (%struct.hpack_decoder*, i32**, i64*, i8**, i8**)*, align 8
  %12 = alloca i32, align 4
  store %struct.hpack_decoder* %0, %struct.hpack_decoder** %6, align 8
  store i32** %1, i32*** %7, align 8
  store i64* %2, i64** %8, align 8
  store i8** %3, i8*** %9, align 8
  store i8** %4, i8*** %10, align 8
  %13 = load i64*, i64** %8, align 8
  %14 = load i64, i64* %13, align 8
  %15 = icmp uge i64 %14, 1
  %16 = zext i1 %15 to i32
  %17 = call i32 @assert(i32 %16)
  %18 = load i32**, i32*** %7, align 8
  %19 = load i32*, i32** %18, align 8
  %20 = load i32, i32* %19, align 4
  store i32 %20, i32* %12, align 4
  %21 = load i32, i32* %12, align 4
  %22 = and i32 %21, 128
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %25

24:                                               ; preds = %5
  store i32 (%struct.hpack_decoder*, i32**, i64*, i8**, i8**)* @hpack_decode_hdr_indexed, i32 (%struct.hpack_decoder*, i32**, i64*, i8**, i8**)** %11, align 8
  br label %38

25:                                               ; preds = %5
  %26 = load i32, i32* %12, align 4
  %27 = and i32 %26, 64
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %30

29:                                               ; preds = %25
  store i32 (%struct.hpack_decoder*, i32**, i64*, i8**, i8**)* @hpack_decode_hdr_index, i32 (%struct.hpack_decoder*, i32**, i64*, i8**, i8**)** %11, align 8
  br label %37

30:                                               ; preds = %25
  %31 = load i32, i32* %12, align 4
  %32 = and i32 %31, 32
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %34, label %35

34:                                               ; preds = %30
  store i32 (%struct.hpack_decoder*, i32**, i64*, i8**, i8**)* @hpack_decode_tbl_update, i32 (%struct.hpack_decoder*, i32**, i64*, i8**, i8**)** %11, align 8
  br label %36

35:                                               ; preds = %30
  store i32 (%struct.hpack_decoder*, i32**, i64*, i8**, i8**)* @hpack_decode_hdr_noindex, i32 (%struct.hpack_decoder*, i32**, i64*, i8**, i8**)** %11, align 8
  br label %36

36:                                               ; preds = %35, %34
  br label %37

37:                                               ; preds = %36, %29
  br label %38

38:                                               ; preds = %37, %24
  %39 = load i32 (%struct.hpack_decoder*, i32**, i64*, i8**, i8**)*, i32 (%struct.hpack_decoder*, i32**, i64*, i8**, i8**)** %11, align 8
  %40 = load %struct.hpack_decoder*, %struct.hpack_decoder** %6, align 8
  %41 = load i32**, i32*** %7, align 8
  %42 = load i64*, i64** %8, align 8
  %43 = load i8**, i8*** %9, align 8
  %44 = load i8**, i8*** %10, align 8
  %45 = call i32 %39(%struct.hpack_decoder* %40, i32** %41, i64* %42, i8** %43, i8** %44)
  ret i32 %45
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @hpack_decode_hdr_indexed(%struct.hpack_decoder*, i32**, i64*, i8**, i8**) #1

declare dso_local i32 @hpack_decode_hdr_index(%struct.hpack_decoder*, i32**, i64*, i8**, i8**) #1

declare dso_local i32 @hpack_decode_tbl_update(%struct.hpack_decoder*, i32**, i64*, i8**, i8**) #1

declare dso_local i32 @hpack_decode_hdr_noindex(%struct.hpack_decoder*, i32**, i64*, i8**, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
